--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,20 @@ name: CI/CD Pipeline
 
 # Executa a cada Push e Pull request na main
 on:
-    push:
-        branches: [ main ]
-    pull_request:
-        branches: [ main]
+  push:
+    branches: ["main"] # Executa sempre que houver um push na branch 'main'
+    paths-ignore:
+      - 'README.md'       # Ignora mudanças apenas no README
+      - 'docs/**'         # Ignora qualquer arquivo dentro da pasta 'docs'
+      - 'LICENSE'         # Ignora o arquivo de licença
+      - 'CONTRIBUTING.md' # Ignora o guia de contribuição
+  pull_request:
+    branches: ["main"] # Executa sempre que um Pull Request for aberto para a branch 'main'
+    paths-ignore:
+      - 'README.md'       # Ignora mudanças apenas no README
+      - 'docs/**'         # Ignora qualquer arquivo dentro da pasta 'docs'
+      - 'LICENSE'         # Ignora o arquivo de licença
+      - 'CONTRIBUTING.md' # Ignora o guia de contribuição
 
 # Lista de Jobs
 jobs:
